Internal data
* BFD-discriminator
* isUp (initial false)

Input signals
* port-up
* port-down
* bisl-up [ISL-FSM]
* FL-ok
* FL-fail
* FL-timeout
* isl-move [ISL-FSM]

Ouput signals
* bfd-up
* bfd-down

@startuml
title BFD port FSM

[*] --> INIT

state initChoice <<choice>>
INIT --> initChoice : history

initChoice --> IDLE : [BFD-discriminator is empty]
initChoice --> CLEANING : [BFD-discriminator is set]

IDLE --> INSTALLING : bisl-up
IDLE -l-> FAIL : port-up

INSTALLING --> UP : port-up
INSTALLING --> CLEANING : FL-fail
INSTALLING --> CLEANING : isl-move
INSTALLING : enter / allocate BFD-discriminator
INSTALLING : enter / emit BFD-session setup

state cleaningChoice <<choice>>

CLEANING --> cleaningChoice : FL-ok / release BFD-discriminator
CLEANING --> FAIL : FL-fail
CLEANING --> FAIL : FL-timeout
CLEANING : enter / emit BFD-session remove
CLEANING : port-up / set isUp = true
CLEANING : port-down / set isUp = false

cleaningChoice --> IDLE : [not isUp]
cleaningChoice --> WAIT_RELEASE : [isUp]

WAIT_RELEASE --> IDLE : port-down
WAIT_RELEASE : exit : set isUp = false

UP --> DOWN : port-down
UP --> CLEANING : isl-move
UP : enter / emit bfd-up
UP : enter / set isUp = true

DOWN --> UP : port-up
DOWN --> CLEANING : isl-move
DOWN : enter / emit bfd-down
DOWN : enter / set isUp = false

FAIL -r-> IDLE : port-down

@enduml
